[package]
name = "meshctl"
version = "0.1.0"
edition = "2021"
description = "Command line interface for ICN Mesh Compute overlay"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
anyhow = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# ICN dependencies
mesh-types = { path = "../crates/mesh-types" }
mesh-net = { path = "../crates/mesh-net" }
mesh-reputation = { path = "../crates/mesh-reputation" }
icn-identity = { path = "../../icn-runtime-root/crates/icn-identity" }
icn-common = { path = "../../icn-runtime-root/crates/icn-common" }

# Content addressing
cid = { workspace = true }
multihash = { workspace = true }

# Terminal UI
prettytable-rs = "0.10"
indicatif = "0.17"
colored = "2.0"
