[package]
name = "icn-verifier"
version = "0.1.0"
edition = "2021"
description = "ICN Federation Receipt Verification Service"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
axum = { workspace = true }
chrono = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors"] }
x25519-dalek = "2.0"
rand = { workspace = true }
base64 = { workspace = true }
aes-gcm = "0.10"
url = "2.3"

icn-wallet-agent = { path = "../../wallet/crates/icn-wallet-agent" }
icn-wallet-core = { path = "../../wallet/crates/icn-wallet-core" }
icn-dag = { path = "../../runtime/crates/dag" }

[dev-dependencies]
reqwest = { workspace = true }
hyper = { version = "0.14", features = ["full"] }
tower-test = "0.4" 